Code clean and update tests (code coverage - 91%)